--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ defaults:
 encoding: utf-8 # Make sure the encoding is right
 lang: en-GB # Set the site language
 title: "Alembic" # Site name or title, also used in jekyll-seo-tag
-logo: "/assets/logos/logo1.png" # Site logo, also used in jekyll-seo-tag
+logo: "/assets/logos/logo256.png" # Site logo, also used in jekyll-seo-tag
 description: "Alembic is a starting point for Jekyll projects. Rather than starting from scratch, this boilerplate is designed to get the ball rolling immediately" # Site description and default description, also used in jekyll-seo-tag
 url: "https://alembic.darn.es" # Site url, also used in jekyll-seo-tag
 baseurl: ""
@@ -113,14 +113,14 @@ css_inline: true # Will insert all styles into a single <style> block in the <he
 
 # 8. Site favicons & manifest icons
 favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
-  16: '/assets/logos/logo@16px.png'
-  32: '/assets/logos/logo@32px.png'
-  96: '/assets/logos/logo@96px.png'
-  120: '/assets/logos/logo@120px.png'
-  144: '/assets/logos/logo@144px.png'
-  180: '/assets/logos/logo@180px.png'
-  512: '/assets/logos/logo@512px.png'
-  1024: '/assets/logos/logo@1024px.png'
+  16: "/assets/logos/logo-256.png"
+  32: "/assets/logos/logo-256.png"
+  96: "/assets/logos/logo-256.png"
+  120: "/assets/logos/logo-256.png"
+  144: "/assets/logos/logo-256.png"
+  180: "/assets/logos/logo-256.png"
+  512: "/assets/logos/logo-256.png"
+  1024: "/assets/logos/logo-256.png"
 
 # 9. Site navigation
 navigation_header:
